--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css" rel='stylesheet'>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+
 
     <title>T'megha Portfolio</title>
 </head>
@@ -21,11 +23,6 @@
         <nav class="nav bd-grid">
             <div>
                 <a href="#" class="nav__logo">T'megha</span></a> 
-                 <!-- <div class="menu-toggler">
-                    <span id="line1" class="toggler-line"></span>
-                    <span id="line2" class="toggler-line"></span>
-                    <span id="line3" class="toggler-line"></span>
-                 </div> -->
             </div>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -91,14 +88,13 @@
 
                 <div>
                     <h2 class="about__subtitle">T'megha</h2>
-                    <p class="first__text">I am T'megha, a passionate Tech geek, a Software Engineer immuned
-                        with great enthusiasm and creative skills to turn Ideas into Real life Projects, I have an
-                        out of the box thought process to deliver unique products, a thoroughbred IT Systems Engineer, and a FrontEnd Software Engineer.
-                        I am a self-motivated, hardworking, and a team player who is always willing to learn new things. A FrontEnd Software Engineer with a strong passion for UI/UX Design. 
-                    </p>
-                    <p class="second__text">I'm very adept in MATLAB, Python, Javascript, Nodejs, Reactjs and
-                        Flutter.At my leisure time, you can catch me playing around with Algorithms on Hackerrank, Leetcode and Codewars.
-                        The goal is using Machine learning to solve complex problems.
+                    <p class="first__text">I am an Experienced Frontend Software Engineer immuned with fervor and creative skills to turn Ideas related to Tech into Real life Projects, I have an
+                        out of the box thought process to deliver unique and Scalable products, Always a big fan of minimalistic designs with great business logic. I am a thoroughbred IT Systems Engineer with a knack for solving Tech related problems. 
+                        I am self-motivated, smartworking, and a curious team player who is always willing to learn new technologies. I provide clear synopsis for high level overview.
+                    </p><br>
+                    <p class="second__text">I'm very adept in MATLAB, Python, JavaScript, Nodejs, Reactjs and
+                        Flutter/Dart. At my leisure time, you can catch me playing around with Data Structures and Algorithms on Hackerrank, Leetcode and Codewars.
+                        The goal is using Machine learning in synergy with Software Engineering to solve complex problems.
                     </p>
                 </div>
             </div>
@@ -112,14 +108,15 @@
                     <img src="assets/img/html5.png" alt="html" class="skills__img" width= "90" height="90">
                     <img src="assets/img/css3.png" alt="css3" class="skills__img" width="70" height="70" >
                     <img src=" assets/img/js.png" alt="javascript" class="skills__img" width="70" height="70" >
-                    <img src=" assets/img/node.png" alt="node" class="skills__img" width="70" height="70" >
+                    <img src=" assets/img/node.png" alt="node" class="skills__img" width="80" height="80" >
                     <img src=" assets/img/react.png" alt="react" class="skills__img" width="70" height="70" >
                     <img src=" assets/img/typescript.png" alt="typescript" class="skills__img" width="70">
                     <img src=" assets/img/python.png" alt="python" class="skills__img" width="90" height="90" >
                     <img src=" assets/img/flutter.png" alt="flutter" class="skills__img" width="90" height="90" >
                     <img src=" assets/img/git.png" alt="git" class="skills__img" width="55" height="55" >
                     <img src=" assets/img/firebase.png" alt="firebase" class="skills__img" width="55" height="55">
-                    <img src=" assets/img/mysql.png" alt="mysql" class="skills__img" width="100" height="100" >
+                    <img src=" assets/img/mysql.png" alt="mysql" class="skills__img" width="100" height="100">
+                    <img src=" assets/img/wordpress.png" alt="mysql" class="skills__img" width="75" height="75" >
                   
 
                 </div>
@@ -127,7 +124,7 @@
                     <a class="button"
                         href="https://docs.google.com/document/d/1myyTw5d6o0M8kb8-HqU7BIB1g_YOZJLyJ-jTjEqe7-A/edit?usp=sharing"
                         target="_blank" rel="noopener noreferrer">
-                        View CV
+                        Download CV
                     </a>
                 </div>
             </div>
@@ -214,7 +211,7 @@
       <section class="contact bd-grid" id="contact">
                 <h2 class="title">Contact me</h2>
                 <div class="contact-content">
-                    <div class="column left">
+                    <div class="left">
                         <div class="text">Get in Touch</div>
                         <div class="icons">
                             <div class="row">
@@ -243,7 +240,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="column right">
+                    <div class="right">
                         <div class="text">Let's Chat about your next project</div>
                         <form action="#">
                             <div class="fields">
@@ -275,6 +272,7 @@
                     class='bx bxl-linkedin'></i></a>
             <a href="https://twitter.com/temitopeakin" class="footer__icon"><i class='bx bxl-twitter'></i></a>
             <a href="https://github.com/temitopeakin1" class="footer__icon"><i class='bx bxl-github'></i></a>
+            <span><i class="fa fa-envelope" aria-hidden="true"></i> &nbsp;<a href="mailto: aalaribe56@gmail.com"></a></span>
         </div>
                 <div id="clock">00:00:00</div>
                 <script>
