--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                     <li class="nav__item"><a href="#skills" class="nav__link">My Tech Stack</a></li>
                     <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
-                    <li class="nav__item"><a href="#blog" class="nav__link">Blogs</a></li>
+                    <li class="nav__item"><a href="#blog" class="nav__link">Blog</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Contact me</a></li> 
                     <div class="d-flex change-theme">
                         <i class="uil uil-moon" id="theme-toggle"></i>
@@ -203,7 +203,7 @@
             <h2 class="section-title">Blog</h2>
             <p class="subtitle">I write Technical articles as well <i class="fas fa-hand-point-down"></i></p>
             <div class="blog-content">
-                <p>Lorem, ipsum dolor</p>
+                <p>...coming soon 😎</p>
             </div>
         </section>
 
@@ -272,7 +272,7 @@
                     class='bx bxl-linkedin'></i></a>
             <a href="https://twitter.com/temitopeakin" class="footer__icon"><i class='bx bxl-twitter'></i></a>
             <a href="https://github.com/temitopeakin1" class="footer__icon"><i class='bx bxl-github'></i></a>
-            <span><i class="fa fa-envelope" aria-hidden="true"></i> &nbsp;<a href="mailto: aalaribe56@gmail.com"></a></span>
+            <a href="mailto: temitopeakinmegha.com" class="footer__icon"><i class='fa fa-envelope'></i></a>
         </div>
                 <div id="clock">00:00:00</div>
                 <script>
