--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <span class="type"></span><br> based in Lagos, Nigeria</br>
                 </h1>
                 <p>I Build Digital Software products Using the Best Technologies 🚀</p>
-                <a href="#contact" class="button">Say hi</a>
+                <a href="#contact" class="button">Hire me</a>
             </div>
 
             <div class="home__social">
@@ -94,7 +94,7 @@
                     </p><br>
                     <p class="second__text">I'm very adept in MATLAB, Python, JavaScript, Nodejs, Reactjs and
                         Flutter/Dart. At my leisure time, you can catch me playing around with Data Structures and Algorithms on Hackerrank, Leetcode and Codewars.
-                        The goal is using Machine learning in synergy with Software Engineering to solve complex problems.
+                        The aim is using Machine learning in synergy with Software Engineering to solve complex problems.
                     </p>
                 </div>
             </div>
