--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <span class="type"></span><br> based in Lagos, Nigeria</br>
                 </h1>
                 <p>I Build Digital Software products Using the Best Technologies 🚀</p>
-                <a href="#contact" class="button">Hire me</a>
+                <a href="#contact" class="button">Hire me  <i class="fas fa-laptop-code"></i></a>
             </div>
 
             <div class="home__social">
@@ -250,11 +250,12 @@
                     </div>
                     <div class="right">
                         <div class="text">Let's Chat about your next project</div>
-                        <form action="#">
+                        <form action="https://formsubmit.co/87bac077934aaa01fa9e9e015f3059a5" method="POST">
                             <div class="fields">
                                 <div class="field name">
                                     <input type="text" placeholder="Name" required>
                                 </div>
+                                <input type="hidden" name="_captcha" value="false">
                                 <div class="field email">
                                     <input type="email" placeholder="Email" required>
                                 </div>
