--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                         out of the box thought process to deliver unique and Scalable products, Always a big fan of minimalistic designs with great business logic. I am a thoroughbred IT Systems Engineer with a knack for solving Tech related problems. 
                         I am self-motivated, smartworking, and a curious team player who is always willing to learn new technologies. I provide clear synopsis for high level overview.
                     </p><br>
-                    <p class="second__text">I'm very adept in MATLAB, Python, JavaScript, Nodejs, Reactjs and
-                        Flutter/Dart. At my leisure time, you can catch me playing around with Data Structures and Algorithms on Hackerrank, Leetcode and Codewars.
+                    <p class="second__text">I'm very adept in <em><strong>MATLAB, Python, JavaScript, Nodejs, Reactjs and
+                        Flutter/Dart</strong></em>. At my leisure time, you can catch me playing around with Data Structures and Algorithms on Hackerrank, Leetcode and Codewars.
                         The aim is using Machine learning in synergy with Software Engineering to solve complex problems.
                     </p>
                 </div>
@@ -264,7 +264,7 @@
                                 <input type="text" placeholder="Subject" required>
                             </div>
                             <div class="field textarea">
-                                <textarea cols="30" rows="10" placeholder="Project Description.." required></textarea>
+                                <textarea cols="50" rows="20" placeholder="Project Description.." required></textarea>
                             </div>
                             <button class="button" type="submit" value="Submit">Shoot <i class="fab fa-telegram-plane"></i></button>
                         </form>
@@ -287,7 +287,6 @@
             <a href="mailto: temitopeakinmegha.com" class="footer__icon"><i class='fa fa-envelope'></i></a>
         </div>
                 <div id="clock">00:00:00</div>
-               
         <p>Copyright &copy;
             <script>document.write(new Date().getFullYear());</script> All rights reserved | T'megha
         </p>
