--- a/index.html
+++ b/index.html
@@ -136,63 +136,63 @@
             <h2 class="section-title">Projects</h2>
             <div class="projects">
                 <div class="projects__box">
-                    <img class="projects__image" src="assets/img/guidedpaths.png" alt="guidedpath">
+                    <a href="https://www.guidedpathsolicitors.com/" target= _blank ><img class="projects__image"  src="assets/img/guidedpaths.png" alt="guidedpath"></a>
                     <h3 class="projects__name">Guided Paths Solicitors</h3>
                     <p class="projects__description">A Legal firm Website.</p>
-                    <a href="https://www.guidedpathsolicitors.com/" class="projects__link">
+                    <a href="https://www.guidedpathsolicitors.com/" target= _blank class="projects__link">
                         Explore Project
                     </a>
                 </div>
                 <div class="projects__box">
-                    <img class="projects__image" src="assets/img/dcsaconsults.png" alt="dcsa">
+                    <a href="https://www.dcsaconsults/" target= _blank><img class="projects__image" src="assets/img/dcsaconsults.png" alt="dcsa"></a>
                     <h3 class="projects__name">Dcsa Consults</h3>
                     <p class="projects__description">Drug Consultancy Company</p>
-                    <a href="https://dcsaconsults.net/" class="projects__link">
+                    <a href="https://dcsaconsults.net/"  target= _blank class="projects__link">
                         Explore Project
                     </a>
                 </div>
                 <div class="projects__box">
-                    <img class="projects__image" src="assets/img/firmlord.png" alt="firmlord">
+                    <a href="https://www.firmlordhair.com.ng"  target= _blank ><img class="projects__image" src="assets/img/firmlord.png" alt="firmlord"></a>
                     <h3 class="projects__name">Firmlord hairs</h3>
                     <p class="projects__description">E-commerce website</p>
-                    <a href="https://www.firmlordhair.com.ng/" class="projects__link">
+                    <a href="https://www.firmlordhair.com.ng/" target= _blank class="projects__link">
                         Explore Project
                     </a>
                 </div>
                 <div class="projects__box">
-                    <img class="projects__image" src="assets/img/quizapp.png" alt="quizapp">
-                    <h3 class="projects__name">Quiz App</h3>
+                    <a href="https://www.tmeghaquizcard.netlify.app"><img class="projects__image" src="assets/img/quizapp.png" alt="quizapp"></a>
+                   <h3 class="projects__name">Quiz App</h3>
                     <p class="projects__description">React Quiz App </p>
-                    <a href="https://tmeghaquizcard.netlify.app/" class="projects__link">
+                    <a href="https://tmeghaquizcard.netlify.app"  class="projects__link">
                         Explore Project
                     </a>
                 </div>
                 <div class="projects__box">
-                    <img class="projects__image" src="assets/img/marvlight.jpg" alt="marv">
+                    <a href="https://play.google.com/store/apps/details?id=com.dynastytech.marvapp/" target= _blank><img class="projects__image" src="assets/img/marvlight.jpg" alt="marv"></a>
                     <h3 class="projects__name">Marvlight Tutor App</h3>
                     <p class="projects__description">Private Tutor App</p>
-                    <a href="https://play.google.com/store/apps/details?id=com.dynastytech.marvapp" class="projects__link">
+                    <a href="https://play.google.com/store/apps/details?id=com.dynastytech.marvapp" target= _blank class="projects__link">
                         Explore Project
                     </a>
                 </div>
                 <div class="projects__box">
-                    <img class="projects__image" src="assets/img/spinelrealtygroup.png" alt="spinel">
+                    <a href="https://www.spinelrealtygroup.com/" target= _blank ><img class="projects__image" src="assets/img/spinelrealtygroup.png" alt="spinel"></a>
                     <h3 class="projects__name">Spinel Realty Group</h3>
                     <p class="projects__description">Realtor Website</p>
-                    <a href="https://www.spinelrealtygroup.com/" class="projects__link">
+                    <a href="https://www.spinelrealtygroup.com/" target= _blank class="projects__link">
                         Explore Project
                     </a>
                 </div>
                 <div class="projects__box">
-                    <img class="projects__image" src="assets/img/covid.png" alt="covid-tracker">
+                    <a href="https://covid-statistics-worldwide.netlify.app/" target= _blank><img class="projects__image" src="assets/img/covid.png" alt="covid-tracker"></a>
                     <h3 class="projects__name">Covid 19 tracker</h3>
                     <p class="projects__description">Covid Statistics Worldwide</p>
-                    <a href="https://covid-statistics-worldwide.netlify.app/" class="projects__link">
+                    <a href="https://covid-statistics-worldwide.netlify.app/" target= _blank class="projects__link">
                         Explore Project
                     </a>
                 </div>
                 <div class="projects__box">
-                    <img class="projects__image" src="assets/img/portfolio.png" alt="T'megha Portfolio">
+                    <a href="#"><img class="projects__image" src="assets/img/portfolio.png" alt="T'megha Portfolio"></a>
                     <h3 class="projects__name">T'megha</h3>
                     <p class="projects__description">My Portfolio Website</p>
                     <a href="#" class="projects__link">
