--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
 
             <div class="home__img">
-                <img src="assets/img/temitope.png" alt="tmegha">
+                <img src="assets/img/favicon.png" alt="tmegha">
             </div>
 
         </section>
