--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="l-header">
         <nav class="nav bd-grid">
             <div>
-                <a href="#" class="nav__logo">T'megha</span></a> 
+                <a href="#" class="nav__logo">T'megha</a> 
             </div>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -39,7 +39,7 @@
             </div>
             <div class="nav__toggle" id="nav-toggle">
                 <i class='bx bx-menu'></i>
-            </div>
+            </div> 
         </nav>
     </header>
   
@@ -163,7 +163,7 @@
                     <a href="https://www.tmeghaquizcard.netlify.app"><img class="projects__image" src="assets/img/quizapp.png" alt="quizapp"></a>
                    <h3 class="projects__name">Quiz App</h3>
                     <p class="projects__description">React Quiz App </p>
-                    <a href="https://tmeghaquizcard.netlify.app"  class="projects__link">
+                    <a href="https://tmeghaquizcard.netlify.app/"  class="projects__link" target="_blank">
                         Explore Project
                     </a>
                 </div>
