--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     </a>
                 </div>
                 <div class="projects__box">
-                    <a href="https://www.tmeghaquizcard.netlify.app"><img class="projects__image" src="assets/img/quizapp.png" alt="quizapp"></a>
+                    <a href="https://tmeghaquizcard.netlify.app/" target="_blank"><img class="projects__image" src="assets/img/quizapp.png"></a>
                    <h3 class="projects__name">Quiz App</h3>
                     <p class="projects__description">React Quiz App </p>
                     <a href="https://tmeghaquizcard.netlify.app/"  class="projects__link" target="_blank">
