--- a/index.html
+++ b/index.html
@@ -286,7 +286,8 @@
             <a href="https://github.com/temitopeakin1" class="footer__icon"><i class='bx bxl-github'></i></a>
             <a href="mailto: temitopeakinmegha.com" class="footer__icon"><i class='fa fa-envelope'></i></a>
         </div>
-                <div id="clock">00:00:00</div>
+        <body onload="getUTC()">
+            <div id="utc"></div>
         <p>Copyright &copy;
             <script>document.write(new Date().getFullYear());</script> All rights reserved | T'megha
         </p>
