--- a/index.html
+++ b/index.html
@@ -192,6 +192,14 @@
                     </a>
                 </div>
                 <div class="projects__box">
+                    <a href="https://taskschedulerapp.netlify.app/" target= _blank><img class="projects__image" src="assets/img/task.png" alt="task-scheduler"></a>
+                    <h3 class="projects__name">Task Scheduler App</h3>
+                    <p class="projects__description">Task Scheduling App</p>
+                    <a href="https://taskschedulerapp.netlify.app/" target= _blank class="projects__link">
+                        Explore Project
+                    </a>
+                </div>
+                <div class="projects__box">
                     <a href="#"><img class="projects__image" src="assets/img/portfolio.png" alt="T'megha Portfolio"></a>
                     <h3 class="projects__name">T'megha</h3>
                     <p class="projects__description">My Portfolio Website</p>
