--- a/index.html
+++ b/index.html
@@ -136,12 +136,13 @@
             <h2 class="section-title">Projects</h2>
             <div class="projects">
                 <div class="projects__box">
-                    <a href="https://www.guidedpathsolicitors.com/" target= _blank ><img class="projects__image"  src="assets/img/guidedpaths.png" alt="guidedpath"></a>
+                    <a href="http://guidedpathsolicitors.herokuapp.com/" target= _blank ><img class="projects__image"  src="assets/img/guidedpaths.png" alt="guidedpath"></a>
                     <h3 class="projects__name">Guided Paths Solicitors</h3>
                     <p class="projects__description">A Legal firm Website.</p>
-                    <a href="https://www.guidedpathsolicitors.com/" target= _blank class="projects__link">
-                        Explore Project
+                    <a href="http://guidedpathsolicitors.herokuapp.com/" target= _blank class="projects__link">
+                        Explore Project 
                     </a>
+                    <div class="tools">HTML 5 | CSS3 | PHP | JAVASCRIPT | MYSQL</div>
                 </div>
                 <div class="projects__box">
                     <a href="https://www.dcsaconsults/" target= _blank><img class="projects__image" src="assets/img/dcsaconsults.png" alt="dcsa"></a>
@@ -150,6 +151,7 @@
                     <a href="https://dcsaconsults.net/"  target= _blank class="projects__link">
                         Explore Project
                     </a>
+                    <div class="tools">HTML 5 | CSS3 | JAVASCRIPT</div>
                 </div>
                 <div class="projects__box">
                     <a href="https://www.firmlordhair.com.ng"  target= _blank ><img class="projects__image" src="assets/img/firmlord.png" alt="firmlord"></a>
@@ -158,22 +160,25 @@
                     <a href="https://www.firmlordhair.com.ng/" target= _blank class="projects__link">
                         Explore Project
                     </a>
+                    <div class="tools">HTML 5 | CSS3 | WORDPRESS</div>
                 </div>
                 <div class="projects__box">
                     <a href="https://tmeghaquizcard.netlify.app/" target="_blank"><img class="projects__image" src="assets/img/quizapp.png"></a>
                    <h3 class="projects__name">Quiz App</h3>
-                    <p class="projects__description">React Quiz App </p>
+                    <p class="projects__description">Quiz App </p>
                     <a href="https://tmeghaquizcard.netlify.app/"  class="projects__link" target="_blank">
                         Explore Project
                     </a>
+                    <div class="tools">REACT | TYPESCRIPT | AXIOS</div>
                 </div>
                 <div class="projects__box">
                     <a href="https://play.google.com/store/apps/details?id=com.dynastytech.marvapp/" target= _blank><img class="projects__image" src="assets/img/marvlight.jpg" alt="marv"></a>
                     <h3 class="projects__name">Marvlight Tutor App</h3>
-                    <p class="projects__description">Private Tutor App</p>
+                    <p class="projects__description">Private Tutor Mobile App</p>
                     <a href="https://play.google.com/store/apps/details?id=com.dynastytech.marvapp" target= _blank class="projects__link">
                         Explore Project
                     </a>
+                    <div class="tools">FLUTTER | DART | FIREBASE</div>
                 </div>
                 <div class="projects__box">
                     <a href="https://www.spinelrealtygroup.com/" target= _blank ><img class="projects__image" src="assets/img/spinelrealtygroup.png" alt="spinel"></a>
@@ -182,6 +187,7 @@
                     <a href="https://www.spinelrealtygroup.com/" target= _blank class="projects__link">
                         Explore Project
                     </a>
+                    <div class="tools">HTML 5 | CSS3 | WORDPRESS</div>
                 </div>
                 <div class="projects__box">
                     <a href="https://covid-statistics-worldwide.netlify.app/" target= _blank><img class="projects__image" src="assets/img/covid.png" alt="covid-tracker"></a>
@@ -190,6 +196,7 @@
                     <a href="https://covid-statistics-worldwide.netlify.app/" target= _blank class="projects__link">
                         Explore Project
                     </a>
+                    <div class="tools">REACT | CSS3 | AXIOS | MATERIAL UI </div>
                 </div>
                 <div class="projects__box">
                     <a href="https://taskschedulerapp.netlify.app/" target= _blank><img class="projects__image" src="assets/img/task.png" alt="task-scheduler"></a>
@@ -198,6 +205,7 @@
                     <a href="https://taskschedulerapp.netlify.app/" target= _blank class="projects__link">
                         Explore Project
                     </a>
+                    <div class="tools">REACT</div>
                 </div>
                 <div class="projects__box">
                     <a href="#"><img class="projects__image" src="assets/img/portfolio.png" alt="T'megha Portfolio"></a>
@@ -206,6 +214,7 @@
                     <a href="#" class="projects__link">
                         Explore Project
                     </a>
+                    <div class="tools">HTML5 | CSS3 | JAVASCRIPT </div>
                 </div>
              </div>
             <div class="projects__btn">
@@ -217,7 +226,7 @@
 
         <section class="blog bd-grid" id="blog">
             <h2 class="section-title">Blog</h2>
-            <p class="subtitle">I write Technical articles as well <i class="fas fa-hand-point-down"></i></p>
+            <p class="subtitle">I also get involved in writing Technical articles <i class="fas fa-hand-point-down"></i></p>
             <div class="blog-content">
                 <p>...coming soon 😎</p>
             </div>
@@ -304,5 +313,4 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="assets/js/main.js"></script>
 </body>
-
 </html>
