--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css" rel='stylesheet'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
 
 
     <title>T'megha Portfolio</title>
@@ -138,10 +141,9 @@
                 <div class="projects__box">
                     <a href="http://guidedpathsolicitors.herokuapp.com/" target= _blank ><img class="projects__image"  src="assets/img/guidedpaths.png" alt="guidedpath"></a>
                     <h3 class="projects__name">Guided Paths Solicitors</h3>
-                    <p class="projects__description">A Legal firm Website.</p>
+                    <p class="projects__description">A Legal firm Website.</p> 
                     <a href="http://guidedpathsolicitors.herokuapp.com/" target= _blank class="projects__link">
-                        Explore Project 
-                    </a>
+                        Explore Project</a> <a href="https://github.com/temitopeakin1/guidedpathsolicitors" target= _blank><i class="fa-brands fa-github"></i></a>
                     <div class="tools">HTML 5 | CSS3 | PHP | JAVASCRIPT | MYSQL</div>
                 </div>
                 <div class="projects__box">
@@ -149,8 +151,7 @@
                     <h3 class="projects__name">Dcsa Consults</h3>
                     <p class="projects__description">Drug Consultancy Company</p>
                     <a href="https://dcsaconsults.net/"  target= _blank class="projects__link">
-                        Explore Project
-                    </a>
+                        Explore Project </a> <a href="https://github.com/temitopeakin1/dcsaconsults" target= _blank><i class="fa-brands fa-github"></i></a>
                     <div class="tools">HTML 5 | CSS3 | JAVASCRIPT</div>
                 </div>
                 <div class="projects__box">
@@ -167,8 +168,7 @@
                    <h3 class="projects__name">Quiz App</h3>
                     <p class="projects__description">Quiz App </p>
                     <a href="https://tmeghaquizcard.netlify.app/"  class="projects__link" target="_blank">
-                        Explore Project
-                    </a>
+                        Explore Project  </a> <a href="https://github.com/temitopeakin1/React-Quiz-Cards" target= _blank><i class="fa-brands fa-github"></i></a>
                     <div class="tools">REACT | TYPESCRIPT | AXIOS</div>
                 </div>
                 <div class="projects__box">
@@ -176,8 +176,7 @@
                     <h3 class="projects__name">Marvlight Tutor App</h3>
                     <p class="projects__description">Private Tutor Mobile App</p>
                     <a href="https://play.google.com/store/apps/details?id=com.dynastytech.marvapp" target= _blank class="projects__link">
-                        Explore Project
-                    </a>
+                        Explore Project  </a> <a href="https://github.com/temitopeakin1/marvlight-tutors" target= _blank><i class="fa-brands fa-github"></i></a>
                     <div class="tools">FLUTTER | DART | FIREBASE</div>
                 </div>
                 <div class="projects__box">
@@ -194,17 +193,15 @@
                     <h3 class="projects__name">Covid 19 tracker</h3>
                     <p class="projects__description">Covid Statistics Worldwide</p>
                     <a href="https://covid-statistics-worldwide.netlify.app/" target= _blank class="projects__link">
-                        Explore Project
-                    </a>
-                    <div class="tools">REACT | CSS3 | AXIOS | MATERIAL UI </div>
+                        Explore Project </a> <a href="https://github.com/temitopeakin1/worldwide-covid-statistics" target= _blank><i class="fa-brands fa-github"></i></a>
+                    <div class="tools">REACT | CSS3 | AXIOS | CHARTJS | MATERIAL UI </div>
                 </div>
                 <div class="projects__box">
                     <a href="https://taskschedulerapp.netlify.app/" target= _blank><img class="projects__image" src="assets/img/task.png" alt="task-scheduler"></a>
                     <h3 class="projects__name">Task Scheduler App</h3>
                     <p class="projects__description">Task Scheduling App</p>
                     <a href="https://taskschedulerapp.netlify.app/" target= _blank class="projects__link">
-                        Explore Project
-                    </a>
+                        Explore Project </a> <a href="https://github.com/temitopeakin1/Task-Scheduler-app" target= _blank><i class="fa-brands fa-github"></i></a>
                     <div class="tools">REACT</div>
                 </div>
                 <div class="projects__box">
@@ -212,8 +209,7 @@
                     <h3 class="projects__name">T'megha</h3>
                     <p class="projects__description">My Portfolio Website</p>
                     <a href="#" class="projects__link">
-                        Explore Project
-                    </a>
+                        Explore Project </a> <a href="https://github.com/temitopeakin1/Portfolio" target= _blank><i class="fa-brands fa-github"></i></a>
                     <div class="tools">HTML5 | CSS3 | JAVASCRIPT </div>
                 </div>
              </div>
