--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <span class="type"></span><br> based in Lagos, Nigeria</br>
                 </h1>
                 <p>I Build Digital Software products Using the Best Technologies 🚀</p>
-                <a href="#contact" class="button">Hire me  <i class="fas fa-laptop-code"></i></a>
+                <a href="#contact" class="bttn">Hire me  <i class="fas fa-laptop-code"></i></a>
             </div>
 
             <div class="home__social">
