--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
     <link href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css" rel='stylesheet'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-
-
-
     <title>T'megha Portfolio</title>
 </head>
 
@@ -262,7 +258,7 @@
                         </div>
                     </div>
                     <div class="right">
-                        <div class="text">Let's Chat about your next project</div>
+                        <div class="text">Lets have a Chat about your next project</div>
                         <form action="https://formsubmit.co/87bac077934aaa01fa9e9e015f3059a5" method="POST">
                             <div class="fields">
                                 <div class="field name">
@@ -274,7 +270,7 @@
                                 </div>
                             </div>
                             <div class="field">
-                                <input type="text" placeholder="Subject" required>
+                                <input type="text" placeholder="Project Title" required>
                             </div>
                             <div class="field textarea">
                                 <textarea cols="50" rows="20" placeholder="Project Description.." required></textarea>
@@ -284,8 +280,7 @@
                     </div>
                 </div>
         </section>
-    </main>
- 
+
     <!--===== FOOTER =====-->
     <footer class="footer">
             <div class="btnScrollToTop">
