--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                             <div class="row">
                                 <i class="fas fa-map-marker-alt"></i>
                                 <div class="info">
-                                    <div class="sub-title">Global</div>
+                                    <div class="sub-title">Lagos, Nigeria</div>
                                 </div>
                             </div>
                             <div class="row">
