--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                         Flutter/Dart</strong></em>. At my leisure time, you can catch me playing around with Data Structures and Algorithms on Hackerrank, Leetcode and Codewars.
                         The aim is using Machine learning in synergy with Software Engineering to solve complex problems.
                     </p>
+                    <p class="third__text">Have a chat with me and get to know about my Prowess<span class="lightning">⚡</span></p>
                 </div>
             </div>
         </section>
@@ -135,10 +136,10 @@
             <h2 class="section-title">Projects</h2>
             <div class="projects">
                 <div class="projects__box">
-                    <a href="http://guidedpathsolicitors.herokuapp.com/" target= _blank ><img class="projects__image"  src="assets/img/guidedpaths.png" alt="guidedpath"></a>
+                    <a href="https://guidedpathsolicitors.com" target= _blank ><img class="projects__image"  src="assets/img/guidedpaths.png" alt="guidedpath"></a>
                     <h3 class="projects__name">Guided Paths Solicitors</h3>
                     <p class="projects__description">A Legal firm Website.</p> 
-                    <a href="http://guidedpathsolicitors.herokuapp.com/" target= _blank class="projects__link">
+                    <a href="https://guidedpathsolicitors.com/" target= _blank class="projects__link">
                         Explore Project</a> <a href="https://github.com/temitopeakin1/guidedpathsolicitors" target= _blank><i class="fa-brands fa-github"></i></a>
                     <div class="tools">HTML 5 | CSS3 | PHP | JAVASCRIPT | MYSQL</div>
                 </div>
@@ -234,7 +235,7 @@
                             <div class="row">
                                 <i class="fas fa-user"></i>
                                 <div class="info">
-                                    <div class="sub-title">Akinmegha Temitope Samuel</div>
+                                    <div class="sub-title">Akinmegha Temitope (T'megha)</div>
                                 </div>
                             </div>
                             <div class="row">
