--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                         out of the box thought process to deliver unique and Scalable products, Always a big fan of minimalistic designs with great business logic. I am a thoroughbred IT Systems Engineer with a knack for solving Tech related problems. 
                         I am self-motivated, smartworking, and a curious team player who is always willing to learn new technologies. I provide clear synopsis for high level overview.
                     </p><br>
-                    <p class="second__text">I'm very adept in <em><strong>MATLAB, Python, JavaScript, Nodejs, Reactjs and
+                    <p class="second__text">I'm very adept in <em><strong>MATLAB, Python, JavaScript, Nodejs, Reactjs, Angular and
                         Flutter/Dart</strong></em>. At my leisure time, you can catch me playing around with Data Structures and Algorithms on Hackerrank, Leetcode and Codewars.
                         The aim is using Machine learning in synergy with Software Engineering to solve complex problems.
                     </p>
-                    <p class="third__text">Have a chat with me and get to know about my Prowess<span class="lightning">⚡</span></p>
+                    <p class="third__text">Have a chat with me and get to know about my Tech Prowess<span class="lightning">⚡</span></p>
                 </div>
             </div>
         </section>
