--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         Flutter/Dart</strong></em>. At my leisure time, you can catch me playing around with Data Structures and Algorithms on Hackerrank, Leetcode and Codewars.
                         The aim is using Machine learning in synergy with Software Engineering to solve complex problems.
                     </p>
-                    <p class="third__text">Have a chat with me and get to know about my Tech Prowess<span class="lightning">⚡</span></p>
+                    <p class="third__text">Have a chat with me and get to know about my Prowess<span class="lightning">⚡</span></p>
                 </div>
             </div>
         </section>
