--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                     <p class="second__text">I'm very adept in <em><strong>MATLAB, Python, JavaScript, Nodejs, Reactjs, Angular and
                         Flutter/Dart</strong></em>. At my leisure time, you can catch me playing around with Data Structures and Algorithms on Hackerrank, Leetcode and Codewars.
                         The aim is using Machine learning in synergy with Software Engineering to solve complex problems.
+                        Have a chat with me and get to know about my Prowess.</p>
                     </p>
-                    <p class="third__text">Have a chat with me and get to know about my Prowess<span class="lightning">⚡</span></p>
                 </div>
             </div>
         </section>
@@ -116,7 +116,7 @@
                     <img src=" assets/img/git.png" alt="git" class="skills__img" width="55" height="55" style="margin-left: 15px;">
                     <img src=" assets/img/firebase.png" alt="firebase" class="skills__img" width="55" height="55">
                     <img src=" assets/img/mysql.png" alt="mysql" class="skills__img" width="100" height="100" style="margin-top: -30px; margin-left: -10px;">
-                    <img src=" assets/img/wordpress.png" alt="mysql" class="skills__img" width="55" height="55" style="margin-top: -5px; margin-left: 20px;" >
+                    <img src=" assets/img/angular.png" alt="mysql" class="skills__img" width="55" height="55" style="margin-top: -5px; margin-left: 20px;" >
                   
 
                 </div>
