--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
                     <div class="tools">FLUTTER | DART | FIREBASE</div>
                 </div>
                 <div class="projects__box">
-                    <a href="https://www.spinelrealtygroup.com/" target= _blank ><img class="projects__image" src="assets/img/spinelrealtygroup.png" alt="spinel"></a>
-                    <h3 class="projects__name">Spinel Realty Group</h3>
-                    <p class="projects__description">Realtor Website</p>
-                    <a href="https://www.spinelrealtygroup.com/" target= _blank class="projects__link">
+                    <a href="https://www.beulahchambers.org/" target= _blank ><img class="projects__image" src="assets/img/beulah.png" alt="beulahchambers"></a>
+                    <h3 class="projects__name">Beulah Chambers</h3>
+                    <p class="projects__description">Legal Website</p>
+                    <a href="https://www.beulahchambers.org/" target= _blank class="projects__link">
                         Explore Project
                     </a>
-                    <div class="tools">HTML 5 | CSS3 | WORDPRESS</div>
+                    <div class="tools">HTML 5 | CSS3 | PHP | JAVASCRIPT | MYSQL</div>
                 </div>
                 <div class="projects__box">
                     <a href="https://covid-statistics-worldwide.netlify.app/" target= _blank><img class="projects__image" src="assets/img/covid.png" alt="covid-tracker"></a>
