update on first__text

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 <div>
                     <h2 class="about__subtitle">T'megha</h2>
-                    <p class="first__text">I am an Experienced Frontend Software Engineer immuned with fervor and creative skills to turn Ideas related to Tech into Real life Projects, I have an
+                    <p class="first__text">I am an Experienced FullStack Software Engineer immuned with fervor and creative skills to turn Ideas related to Tech into Real life Projects, I have an
                         out of the box thought process to deliver unique and Scalable products, Always a big fan of minimalistic designs with great business logic. I am a thoroughbred IT Systems Engineer with a knack for solving Tech related problems. 
                         I am self-motivated, smartworking, and a curious team player who is always willing to learn new technologies. I provide clear synopsis for high level overview.
                     </p><br>
