--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                    <li class="nav__item"><a href="#skills" class="nav__link">My Tech Stack</a></li>
+                    <li class="nav__item"><a href="#skills" class="nav__link">Tech Stack</a></li>
                     <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
                     <li class="nav__item"><a href="#blog" class="nav__link">Blog</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Contact me</a></li> 
@@ -170,7 +170,7 @@
                 <div class="projects__box">
                     <a href="https://www.beulahchambers.org/" target= _blank ><img class="projects__image" src="assets/img/beulah.png" alt="beulahchambers"></a>
                     <h3 class="projects__name">Beulah Chambers</h3>
-                    <p class="projects__description">Legal Website</p>
+                    <p class="projects__description">Legal Webapp</p>
                     <a href="https://www.beulahchambers.org/" target= _blank class="projects__link">
                         Explore Project
                     </a>
@@ -195,7 +195,7 @@
                 <div class="projects__box">
                     <a href="#"><img class="projects__image" src="assets/img/portfolio.png" alt="T'megha Portfolio"></a>
                     <h3 class="projects__name">T'megha</h3>
-                    <p class="projects__description">My Portfolio Website</p>
+                    <p class="projects__description">My Portfolio Website V1</p>
                     <a href="#" class="projects__link">
                         Explore Project </a> <a href="https://github.com/temitopeakin1/Portfolio" target= _blank><i class="fa-brands fa-github"></i></a>
                     <div class="tools">HTML5 | CSS3 | JAVASCRIPT </div>
