update on About Bio

--- a/index.html
+++ b/index.html
@@ -86,15 +86,22 @@
                 </div>
 
                 <div>
-                    <h2 class="about__subtitle">T'megha</h2>
-                    <p class="first__text">I am an Experienced FullStack Software Engineer immuned with fervor and creative skills to turn Ideas related to Tech into Real life Projects, I have an
-                        out of the box thought process to deliver unique and Scalable products, Always a big fan of minimalistic designs with great business logic. I am a thoroughbred IT Systems Engineer with a knack for solving Tech related problems. 
-                        I am self-motivated, smartworking, and a curious team player who is always willing to learn new technologies. I provide clear synopsis for high level overview.
+                    <h1 class="about__subtitle">🚀 Crafting Digital Dreams into Reality</h1>
+                    <p class="first__text">Imagine a thoroughbred IT Systems Engineer with a natural gift for cracking the toughest tech problems. 
+                        That's me! I thrive on challenges, using my knack for dissecting complex issues and piecing together solutions that defy the ordinary. 
+                        I am armed with an out-of-the-box thought process, I'm on a mission to turn the ordinary into the extraordinary.
                     </p><br>
-                    <p class="second__text">I'm very adept in <em><strong>MATLAB, Python, JavaScript, Nodejs, Reactjs, Angular and
-                        Flutter/Dart</strong></em>. At my leisure time, you can catch me playing around with Data Structures and Algorithms on Hackerrank, Leetcode and Codewars.
-                        The aim is using Machine learning in synergy with Software Engineering to solve complex problems.
-                        Have a chat with me and get to know about my Prowess.</p>
+                    <h1 class="about__subtitle">
+                        🎨 Mastering Minimalism and Business Brilliance</h1>
+                    <p class="second__text">I'm not just a code virtuoso; I'm an artist of minimalistic designs combined with unparalleled business logic.
+                         I understand that elegant simplicity speaks volumes, and my creations are the embodiment of this philosophy.
+                         Every line of code I write weaves together functionality and aesthetics to create scalable products that captivate and conquer.</p><br>
+                    <h1 class="about__subtitle">
+                        🤝 Curiously Collaborative, Infinitely Curious</h1>
+                    <p class="second__text">I don't just work in a team, I thrive in it. I'm a self-motivated, smart-working, 
+                        and endlessly curious team player who understands that learning never stops. New technologies are my 
+                        playground, and I'm the curious dude who can't resist exploring.
+                         My hunger for knowledge is insatiable, and I'm always ready to embrace the next big thing.</p>
                     </p>
                 </div>
             </div>
