--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
             <h2 class="section-title">Projects</h2>
             <div class="projects">
                 <div class="projects__box">
-                    <a href="https://guidedpathsolicitors.com" target= _blank ><img class="projects__image"  src="assets/img/guidedpaths.png" alt="guidedpath"></a>
-                    <h3 class="projects__name">Guided Paths Solicitors</h3>
-                    <p class="projects__description">A Legal firm Website.</p> 
-                    <a href="https://guidedpathsolicitors.com/" target= _blank class="projects__link">
-                        Explore Project</a> <a href="https://github.com/temitopeakin1/guidedpathsolicitors" target= _blank><i class="fa-brands fa-github"></i></a>
-                    <div class="tools">HTML 5 | CSS3 | PHP | JAVASCRIPT | MYSQL</div>
+                    <a href="https://productmgtapp.netlify.app/" target= _blank ><img class="projects__image"  src="assets/img/product.png" alt="product"></a>
+                    <h3 class="projects__name">Product Management</h3>
+                    <p class="projects__description">An application that manages different products</p> 
+                    <a href="https://productmgtapp.netlify.app/" target= _blank class="projects__link">
+                        Explore Project</a> <a href="https://github.com/temitopeakin1/product-mgt-application" target= _blank><i class="fa-brands fa-github"></i></a>
+                    <div class="tools">Angular | RxJs</div>
                 </div>
                 <div class="projects__box">
                     <a href="https://www.dcsaconsults/" target= _blank><img class="projects__image" src="assets/img/dcsaconsults.png" alt="dcsa"></a>
@@ -167,13 +167,14 @@
                     <div class="tools">REACT | TYPESCRIPT | AXIOS</div>
                 </div>
                 <div class="projects__box">
-                    <a href="https://play.google.com/store/apps/details?id=com.dynastytech.marvapp/" target= _blank><img class="projects__image" src="assets/img/marvlight.jpg" alt="marv"></a>
-                    <h3 class="projects__name">Marvlight Tutor App</h3>
-                    <p class="projects__description">Private Tutor Mobile App</p>
-                    <a href="https://play.google.com/store/apps/details?id=com.dynastytech.marvapp" target= _blank class="projects__link">
-                        Explore Project  </a> <a href="https://github.com/temitopeakin1/marvlight-tutors" target= _blank><i class="fa-brands fa-github"></i></a>
-                    <div class="tools">FLUTTER | DART | FIREBASE</div>
+                    <a href="#"><img class="projects__image" src="assets/img/crud.png" alt="crud app"></a>
+                    <h3 class="projects__name">Fullstack crud feedback App</h3>
+                    <p class="projects__description">CRUD feedback App</p>
+                    <a href="https://crud-feedbackapp.netlify.app/" class="projects__link">
+                        Explore Project </a> <a href="https://github.com/temitopeakin1/CRUD-feedback-app" target= _blank><i class="fa-brands fa-github"></i></a>
+                    <div class="tools">REACT | NODEJS | CONTEXT-API | FRAMER-MOTION |JSON SERVER </div>
                 </div>
+                
                 <div class="projects__box">
                     <a href="https://www.beulahchambers.org/" target= _blank ><img class="projects__image" src="assets/img/beulah.png" alt="beulahchambers"></a>
                     <h3 class="projects__name">Beulah Chambers</h3>
@@ -199,6 +200,7 @@
                         Explore Project </a> <a href="https://github.com/temitopeakin1/Task-Scheduler-app" target= _blank><i class="fa-brands fa-github"></i></a>
                     <div class="tools">REACT</div>
                 </div>
+                
                 <div class="projects__box">
                     <a href="#"><img class="projects__image" src="assets/img/portfolio.png" alt="T'megha Portfolio"></a>
                     <h3 class="projects__name">T'megha</h3>
