update projects section

--- a/index.html
+++ b/index.html
@@ -144,19 +144,19 @@
             <div class="projects">
                 <div class="projects__box">
                     <a href="https://productmgtapp.netlify.app/" target= _blank ><img class="projects__image"  src="assets/img/product.png" alt="product"></a>
-                    <h3 class="projects__name">Product Management</h3>
+                    <h3 class="projects__name">Product Mgt App</h3>
                     <p class="projects__description">An application that manages different products</p> 
                     <a href="https://productmgtapp.netlify.app/" target= _blank class="projects__link">
                         Explore Project</a> <a href="https://github.com/temitopeakin1/product-mgt-application" target= _blank><i class="fa-brands fa-github"></i></a>
                     <div class="tools">Angular | RxJs</div>
                 </div>
                 <div class="projects__box">
-                    <a href="https://www.dcsaconsults/" target= _blank><img class="projects__image" src="assets/img/dcsaconsults.png" alt="dcsa"></a>
-                    <h3 class="projects__name">Dcsa Consults</h3>
-                    <p class="projects__description">Drug Consultancy Company</p>
-                    <a href="https://dcsaconsults.net/"  target= _blank class="projects__link">
-                        Explore Project </a> <a href="https://github.com/temitopeakin1/dcsaconsults" target= _blank><i class="fa-brands fa-github"></i></a>
-                    <div class="tools">HTML 5 | CSS3 | JAVASCRIPT</div>
+                    <a href="https://hampshire-crm.vercel.app/" target= _blank><img class="projects__image" src="assets/img/crm.png" alt="hampshire"></a>
+                    <h3 class="projects__name">CRM App</h3>
+                    <p class="projects__description">CRM Application</p> 
+                    <a href="https://hampshire-crm.vercel.app/"  target= _blank class="projects__link">
+                        Explore Project </a> <a href="https://github.com/temitopeakin1/hampshire-crm" target= _blank><i class="fa-brands fa-github"></i></a>
+                    <div class="tools">Reactjs | supabase | syncfusion library | chartjs | Tailwind</div>
                 </div>
                 <div class="projects__box">
                     <a href="https://tmeghaquizcard.netlify.app/" target="_blank"><img class="projects__image" src="assets/img/quizapp.png"></a>
@@ -164,7 +164,7 @@
                     <p class="projects__description">Quiz App </p>
                     <a href="https://tmeghaquizcard.netlify.app/"  class="projects__link" target="_blank">
                         Explore Project  </a> <a href="https://github.com/temitopeakin1/React-Quiz-Cards" target= _blank><i class="fa-brands fa-github"></i></a>
-                    <div class="tools">REACT | TYPESCRIPT | AXIOS</div>
+                    <div class="tools">Reactjs | Typescript | Axios</div>
                 </div>
                 <div class="projects__box">
                     <a href="#"><img class="projects__image" src="assets/img/crud.png" alt="crud app"></a>
@@ -172,7 +172,7 @@
                     <p class="projects__description">CRUD feedback App</p>
                     <a href="https://crud-feedbackapp.netlify.app/" class="projects__link">
                         Explore Project </a> <a href="https://github.com/temitopeakin1/CRUD-feedback-app" target= _blank><i class="fa-brands fa-github"></i></a>
-                    <div class="tools">REACT | NODEJS | CONTEXT-API | FRAMER-MOTION |JSON SERVER </div>
+                    <div class="tools">Reactjs | Nodejs | Context-api | framer-motion | Json-server </div>
                 </div>
                 
                 <div class="projects__box">
@@ -182,7 +182,7 @@
                     <a href="https://www.beulahchambers.org/" target= _blank class="projects__link">
                         Explore Project
                     </a>
-                    <div class="tools">HTML 5 | CSS3 | PHP | JAVASCRIPT | MYSQL</div>
+                    <div class="tools">Html5 | Css3 | Php | JavaScript | MySql</div>
                 </div>
                 <div class="projects__box">
                     <a href="https://covid-statistics-worldwide.netlify.app/" target= _blank><img class="projects__image" src="assets/img/covid.png" alt="covid-tracker"></a>
@@ -190,7 +190,7 @@
                     <p class="projects__description">Covid Statistics Worldwide</p>
                     <a href="https://covid-statistics-worldwide.netlify.app/" target= _blank class="projects__link">
                         Explore Project </a> <a href="https://github.com/temitopeakin1/worldwide-covid-statistics" target= _blank><i class="fa-brands fa-github"></i></a>
-                    <div class="tools">REACT | CSS3 | AXIOS | CHARTJS | MATERIAL UI </div>
+                    <div class="tools">Reactjs | Css3 | Axios | Chartjs | Material UI </div>
                 </div>
                 <div class="projects__box">
                     <a href="https://taskschedulerapp.netlify.app/" target= _blank><img class="projects__image" src="assets/img/task.png" alt="task-scheduler"></a>
@@ -198,7 +198,7 @@
                     <p class="projects__description">Task Scheduling App</p>
                     <a href="https://taskschedulerapp.netlify.app/" target= _blank class="projects__link">
                         Explore Project </a> <a href="https://github.com/temitopeakin1/Task-Scheduler-app" target= _blank><i class="fa-brands fa-github"></i></a>
-                    <div class="tools">REACT</div>
+                    <div class="tools">Reactjs</div>
                 </div>
                 
                 <div class="projects__box">
@@ -207,7 +207,7 @@
                     <p class="projects__description">My Portfolio Website V1</p>
                     <a href="#" class="projects__link">
                         Explore Project </a> <a href="https://github.com/temitopeakin1/Portfolio" target= _blank><i class="fa-brands fa-github"></i></a>
-                    <div class="tools">HTML5 | CSS3 | JAVASCRIPT </div>
+                    <div class="tools">Html5 | Css3 | Javascript </div>
                 </div>
              </div>
             <div class="projects__btn">
