--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         class='bx bxl-twitter'></i></a>
                 <a target="_blank" href="https://github.com/temitopeakin1" class="home__social-icon"><i
                         class='bx bxl-github'></i></a>
-                <a target="_blank" href="https://profile.codersrank.io/user/temitopeakin1" class="home__social-icon"><i
+                <a target="_blank" href="https://profile.codersrank.io/user/temitopeakin1/" class="home__social-icon"><i
                         class='bx bx-code-alt'></i></a>
                 <a href="#about" class="scroll-down">
                     Scroll down
