--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 <!--===== home =====-->
         <section class="home bd-grid" id="home">
             <div class="home__data">
-                <h1 class="home__title">Hi<span class="wave">👋</span>,<br>I'm <span class="home__title-color">Akinmegha Temitope</span><br>
+                <h1 class="home__title">Hi<span class="wave">👋</span>,<br>I'm <span class="home__title-color">Temitope Akinmegha</span><br>
                     <span class="type"></span><br> based in Lagos, Nigeria</br>
                 </h1>
-                <p>I Build Digital Software products Using the Best Technologies 🚀</p>
+                <p>I build exceptional digital software products using premium technologies 🚀</p>
                 <a href="#contact" class="bttn">Hire me <i class="fas fa-laptop-code"></i></a>
             </div>
 
